[XUI-1283] Fix bottom-of-page margin collapsing in Safari (#4971)
Required to prevent compositions squashing up against the bottom of the page when using `hasAutoSpaceAround`.

--- a/src/sass/4-base/_base.scss
+++ b/src/sass/4-base/_base.scss
@@ -11,6 +11,7 @@
 .#{$ns}-body {
   @include xui-container;
   background-color: $xui-body-bg-color;
+  -webkit-margin-bottom-collapse: separate;
   min-height: 100%;
   overflow-y: scroll;
 }
